# thockflow

./: .bazelignore  .bazelrc  .gitignore  BUILD  CLAUDE.md  Cargo.toml  MODULE.bazel  README.md  package.json  podman-compose.yaml  requirements.txt  tailwind.config.js
bundle/: BUILD  defs.bzl  index.html  index.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
server/: BUILD  Cargo.toml
server/src/: main.rs
src/: lib.rs
src/typing/: hook.rs  matching.rs  mdx_components.rs  mod.rs  quotes.rs  results.rs
static/: quotes.txt
toolchains/: BUILD
tools/: BUILD  platform_transitions.bzl  pnpm  validate_quotes.py
