[package]
name = "thockflow"
version = "0.0.1"
edition = "2021"

[workspace]
members = [".", "server"]

[[bin]]
name = "app"

[dependencies]
wasm-bindgen = "=0.2.100"
log = "0.4"
stylist = { version = "0.10.1", features = [
    "yew",
    "macros",
], default-features = false }
yew = { version = "0.19", features = ["hydration"] }
yew-router = { version = "0.16.0" }
time = { version = "0.3.12", features = ["macros", "formatting"] }
lazy_static = "1.4.0"
web-sys = "0.3.58"
js-sys = "0.3"

[patch.'crates-io']
# yew = { path = "../yew/packages/yew" }
# yew-router = { path = "../yew/packages/yew-router" }
yew = { git = "https://github.com/kcking/yew", branch = "mdx" }
yew-router = { git = "https://github.com/kcking/yew", branch = "mdx" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]