[package]
name = "thockflow"
version = "0.0.1"
edition = "2021"

[workspace]
members = [".", "server"]

[[bin]]
name = "app"

[dependencies]
wasm-bindgen = "=0.2.100"
log = "0.4"
stylist = { version = "0.13", features = [
    "yew",
    "macros",
], default-features = false }
yew = { version = "0.21", features = ["hydration"] }
yew-router = { version = "0.18" }
time = { version = "0.3.12", features = ["macros", "formatting"] }
lazy_static = "1.4.0"
web-sys = { version = "0.3.58", features = ["Element", "DomRect", "HtmlElement", "Node", "Window", "Document"] }
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = "0.2"



[target.'cfg(not(target_arch = "wasm32"))'.dependencies]